# matilda-plugin-template

./: main.py  pyproject.toml
agent-plugin/: build.gradle.kts  gradle.properties
agent-plugin/plugin/: build.gradle.kts
agent-plugin/plugin/src/main/java/org/matilda/template/: FunctionService.java  FunctionService.kt  MathService.java  MathService.kt  TemplatePlugin.java  TemplatePlugin.kt  TemplatePluginComponent.java  TemplatePluginComponent.kt
agent-plugin/plugin/src/main/proto/template/protos/: exercise.proto
template/: .gitignore  template_plugin.py
